tests/snapshots/claptrap__tests__command__groups.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_major='1'
claptrap_iface='eth0'
