tests/snapshots/claptrap__tests__command__help_template.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_c99dd66c'
myprog 

[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_c99dd66c
exit 0
