tests/snapshots/claptrap__tests__command__hide.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_94720ff7'
[1m[4mUsage:[0m [1mmyprog[0m [COMMAND]

[1m[4mCommands:[0m
  [1mbeta[0m  Some help and text
  [1mhelp[0m  Print this message or the help of the given subcommand(s)

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_94720ff7
exit 0
