tests/snapshots/claptrap__tests__command__infer_subcommands.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
claptrap_test_arg1='true'
