tests/snapshots/claptrap__tests__command__long_about.snap
---
source: src/tests.rs
expression: output
---
command cat <<'EOF_842d1b68'
Does really amazing things to great people. Now let's talk a little more in
depth about how this subcommand really works. It may take about a few lines of
text, but that's ok!

[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')
EOF_842d1b68
exit 0
