tests/snapshots/claptrap__tests__command__long_flag_alias.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap__subcommand='test'
claptrap_test_search='true'
